Make home page + contact form

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,25 @@
-baseURL = 'https://markotadic.com/'
-languageCode = 'en-us'
-title = 'Marko Tadić'
-theme = 'ananke'
+title = "Marko Tadić"
+baseURL = "https://markotadic.com/"
+theme = "ananke"
+
+languageCode = "en-us"
+Paginate = 25
+pluralizeListTitles = false
+
+enableRobotsTXT = true
+googleAnalytics = "G-5Q5THBGQ2B"
+
+[params]
+author = "Marko Tadić"
+site_logo = "img/memoji.png"
+disable_share = true
+
+background_color_class = "bg-near-black"
+body_classes = "avenir bg-near-white"
+post_content_classes = "avenir bg-near-white"
+
+ananke_socials = [
+  {name = "stackoverflow", url = "https://stackoverflow.com/users/2165585/tadija"},
+  {name = "github", url = "https://github.com/tadija"},
+  {name = "linkedin", url = "https://www.linkedin.com/in/tadija"},
+]
