--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -4,6 +4,9 @@ mainSections = ['apps', 'blog', 'portfolio']
 site_logo = "img/memoji.png"
 images = [ "img/memoji.png" ]
 
+custom_css = [ "css/custom.css" ]
+custom_js = [ "js/custom.js" ]
+
 background_color_class = "bg-near-black"
 body_classes = "avenir bg-near-white"
 post_content_classes = "avenir bg-near-white"
